<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home Tab -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <!-- Inventory Tab -->
    <item
        android:id="@+id/nav_inventory"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_inventory" />

    <!-- Add Tab (Center Button) -->
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />

    <!-- Settings Tab -->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

    <!-- Info Tab -->
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_info" />

</menu>